@@ -38,7 +38,14 @@ class CInlineAction extends CAction
 			{
 				$name=$param->getName();
 				if(isset($_GET[$name]))
-					$params[]=$_GET[$name];
+				{
+					if($param->isArray())
+						$params[]=is_array($_GET[$name]) ? $_GET[$name] : array($_GET[$name]);
+					else if(!is_array($_GET[$name]))
+						$params[]=$_GET[$name];
+					else
+						throw new CHttpException(400,Yii::t('yii','Your request is invalid.'));
+				}
 				else if($param->isDefaultValueAvailable())
 					$params[]=$param->getDefaultValue();
 				else
